Moved email form.

--- a/index.html
+++ b/index.html
@@ -142,19 +142,18 @@
 				<div class="form-intro text-center mb-3">We are still testing and refining our tools.</br>
 					Join now to be invited for the launch in a few weeks.</div>
 				<div class="form-wrapper">
-					<form class="form-inline justify-content-center flex-wrap">
+					<!--form class="form-inline justify-content-center flex-wrap">
 						<div class="form-group mr-md-2 mb-3 mb-md-0">
 							<label for="email" class="sr-only">Email</label>
 							<input type="email" class="form-control " id="email" placeholder="Your Email">
 						</div>
 						<button type="submit" class="btn btn-primary btn-submit mb-3 mb-md-0">Join</button>
-					</form>
+					</form-->
+					<div class='mailmunch-forms-widget-890261'></div>
 				</div>
 			</div>
 		</div>
 	</section>
-
-	<div class='mailmunch-forms-widget-890261'></div>
 
 	<footer class="footer mt-5">
 		<div class="footer-bottom text-center py-5 mt-5">
