--- a/index.html
+++ b/index.html
@@ -137,25 +137,15 @@
 
 	<section class="form-section pb-5">
 		<div class="container">
-			<div class="lead-form-wrapper single-col-max mx-auto theme-bg-light rounded p-5">
-				<h2 class="form-heading text-center">Get early access</h2>
-				<div class="form-intro text-center mb-3">We are still testing and refining our tools.</br>
-					Join now to be invited for the launch in a few weeks.</div>
+			<div class="lead-form-wrapper single-col-max mx-auto theme-bg-light rounded p-5 pt-0">
 				<div class="form-wrapper">
-					<!--form class="form-inline justify-content-center flex-wrap">
-						<div class="form-group mr-md-2 mb-3 mb-md-0">
-							<label for="email" class="sr-only">Email</label>
-							<input type="email" class="form-control " id="email" placeholder="Your Email">
-						</div>
-						<button type="submit" class="btn btn-primary btn-submit mb-3 mb-md-0">Join</button>
-					</form-->
 					<div class='mailmunch-forms-widget-890261'></div>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<footer class="footer mt-5">
+	<footer class="footer">
 		<div class="footer-bottom text-center py-5 mt-5">
 			<small class="copyright">
 				<a class="theme-link" href="https://discord.gg/ye2cCJ5" target="_blank">Contact <i
