--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 	<section class="form-section pb-5">
 		<div class="container">
-			<div class="lead-form-wrapper single-col-max mx-auto theme-bg-light rounded p-5 pt-0">
+			<div class="lead-form-wrapper single-col-max mx-auto theme-bg-light rounded px-5 pb-3 pt-0">
 				<div class="form-wrapper">
 					<div class='mailmunch-forms-widget-890261'></div>
 				</div>
