--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-	<title>P2P Proofreading</title>
+	<title>Free P2P Proofreading</title>
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Join our peer-to-peer proofreading community for free proofreading and feedback.">
+	<meta name="description" content="Join our community for free proofreading and feedback of your technical documents, posts and articles. ">
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:700|Roboto:400,400i,700&display=swap" rel="stylesheet">
@@ -38,16 +38,16 @@
 				<div class="col-12 col-md-7 pt-5 mb-5 align-self-center">
 					<div class="promo pr-md-3 pr-lg-5">
 						<h1 class="headline mb-3">
-							Peer-to-peer Proofreading Community for Technical Writers
+							Peer-to-Peer Proofreading Community
 						</h1>
 						<div class="subheadline mb-4">
-							Give feedback to other writers to get feedback on your posts and documents.
+							Get feedback on your blog posts and technical documentation from other writers, users and engineers for free.
 						</div>
 					</div>
 				</div>
 				<div class="col-12 col-md-5 mb-5 align-self-center">
 					<div class="book-cover-holder">
-						<img class="img-fluid book-cover" src="intro.png" alt="Feedback Farm Intro">
+						<img class="img-fluid book-cover" src="free-proofreading.png" alt="Feedback Farm - free proofreading">
 					</div>
 				</div>
 			</div>
